--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,7 +123,30 @@ $secondary-color: #000;
     }
 }
 
+// ============ media query =============
+
+
 @media only screen and (max-width: 768px){
+
+    .navbar{
+        width: 100%;
+        min-height: 70px;
+        padding: 0 40px 0 30px;
+        background-color: #fff !important;
+        
+        position: fixed !important;
+        top: 0;
+        border-bottom: 1px solid grey;
+    
+        .h2 {
+            font-size: 30px;
+            font-weight: bold;
+            font-family: Ubuntu;
+            color: #0A2FFF !important;
+        }
+    }
+    
+    
 
     .parent-container {
         width: 100%;
