--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,8 @@ $secondary-color: #000;
         font-family: Ubuntu;
         color: #0A2FFF !important;
     }
+
+   
 }
 
 
@@ -117,6 +119,10 @@ $secondary-color: #000;
                     }
                 }
 
+                .check{
+                    width: 90%;
+                }
+
                 
             }
         }
@@ -139,10 +145,16 @@ $secondary-color: #000;
         border-bottom: 1px solid grey;
     
         .h2 {
-            font-size: 30px;
+            font-size: 37px;
             font-weight: bold;
             font-family: Ubuntu;
             color: #0A2FFF !important;
+        }
+
+        .nav-item{
+            a{
+                font-size: 1.2rem;
+            }
         }
     }
     
