--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,7 +39,7 @@ $secondary-color: #000;
 
 
 .parent-container {
-    width: 100%;
+    width: 100vw;
     min-height: calc(100vh - 70px);
     background-color: #ffff;
     margin-top: 70px;
@@ -161,7 +161,7 @@ $secondary-color: #000;
     
 
     .parent-container {
-        width: 100%;
+        width: 100vw;
         min-height: calc(100vh - 70px);
         background-color: #ffff;
         margin-top: 70px;
